--- a/_sass/termina-plex/_pages.scss
+++ b/_sass/termina-plex/_pages.scss
@@ -80,13 +80,13 @@ article header h1 {
   font-size: 50%;
 }
 
-.authorPronouns::before {
-  content: "("
-}
-
-.authorPronouns::after {
-  content: ")"
-}
+//.authorPronouns::before {
+//  content: "("
+//}
+//
+//.authorPronouns::after {
+//  content: ")"
+//}
 
 // Pages: List
 .listHeader,
