--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,5 @@
 <head>
+  <link rel="icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,13 +8,13 @@
   {% endif %}
   {%- seo title=false -%}
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+  <title>MOCKACHINO</title>
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
   {%- endif -%}
   {%- if site.umami_analytics.url and site.umami_analytics.data_website_id -%}
-    {%- include umami-analytics.html -%}
   {%- endif -%}
-
+  {%- include umami-analytics.html -%}
+  {%- include google-analytics.html %}
   {%- include custom-head.html %}
 </head>
