--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@ layout: base
 
 <article class="postWrapper">
   <header class="postHeader">
-    <h1>Blog Posts</h1>
+    <h1>Blog</h1>
   </header>
 
   {%- if posts.size > 0 -%}
