--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -10,13 +10,13 @@
   #animatedText {
     opacity: 1;
   }
-  .socialNavbar ul {
-    display: flex;
-    flex-direction: column;
-  }
-  .socialNavbar li {
-    margin-bottom: 10px; /* Optional: Add some space between the items */
-  }
+  /*.socialNavbar ul {*/
+  /*  display: flex;*/
+  /*  flex-direction: column;*/
+  /*}*/
+  /*.socialNavbar li {*/
+  /*  margin-bottom: 10px; !* Optional: Add some space between the items *!*/
+  /*}*/
 </style>
 
 <body>
@@ -61,6 +61,7 @@
   document.addEventListener('DOMContentLoaded', function() {
     const texts = [
       'Competitive Shooter',
+      'Commentator',
       'Journalist',
       'Gamer',
       'YouTube Editor'
