--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,23 +2,6 @@
 <html lang="{{ page.lang | default: site.lang | default: 'en' }}">
 {%- include head.html -%}
 
-<style>
-  .fade {
-    transition: opacity 0.5s ease-in-out;
-    opacity: 1;
-  }
-  #animatedText {
-    opacity: 1;
-  }
-  /*.socialNavbar ul {*/
-  /*  display: flex;*/
-  /*  flex-direction: column;*/
-  /*}*/
-  /*.socialNavbar li {*/
-  /*  margin-bottom: 10px; !* Optional: Add some space between the items *!*/
-  /*}*/
-</style>
-
 <body>
 <div class="flexWrapper">
   {%- include header.html -%}
@@ -29,7 +12,13 @@
         <div>
           <h1 class="indexHeader">
             {{ site.author.name }}
-            <div id="animatedText" class="authorPronouns">Programmer</div>
+            <div class="authorPronouns">
+              <h3 href="" class="typewrite"
+                 data-period="2000"
+                 data-type='[ "YouTube Editor", "Software Engineer", "Competitive Shooter", "Journalist", "Commentator" ]'>
+                <span class="wrap"></span>
+              </h3>
+            </div>
           </h1>
         </div>
         {%- if site.termina-plex.social_links -%}
@@ -58,31 +47,62 @@
 
 <script src="{{ '/assets/js/theme.js' | relative_url }}"></script>
 <script>
-  document.addEventListener('DOMContentLoaded', function() {
-    const texts = [
-      'Competitive Shooter',
-      'Commentator',
-      'Journalist',
-      'Gamer',
-      'YouTube Editor'
-    ];
-    let index = 0;
-    const textElement = document.getElementById('animatedText');
+  var TxtType = function(el, toRotate, period) {
+    this.toRotate = toRotate;
+    this.el = el;
+    this.loopNum = 0;
+    this.period = parseInt(period, 10) || 2000;
+    this.txt = '';
+    this.tick();
+    this.isDeleting = false;
+  };
 
-    function changeText() {
-      textElement.classList.add('fade');
-      setTimeout(() => {
-        textElement.classList.remove('fade');
-        setTimeout(() => {
-          textElement.textContent = texts[index];
-          textElement.classList.add('fade');
-          index = (index + 1) % texts.length;
-        }, 0);
-      }, 0);
+  TxtType.prototype.tick = function() {
+    var i = this.loopNum % this.toRotate.length;
+    var fullTxt = this.toRotate[i];
+
+    if (this.isDeleting) {
+      this.txt = fullTxt.substring(0, this.txt.length - 1);
+    } else {
+      this.txt = fullTxt.substring(0, this.txt.length + 1);
     }
 
-    setInterval(changeText, 2000);
-  });
+    this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+
+    var that = this;
+    var delta = 100 - Math.random() * 100;
+
+    if (this.isDeleting) { delta /= 2; }
+
+    if (!this.isDeleting && this.txt === fullTxt) {
+      delta = this.period;
+      this.isDeleting = true;
+    } else if (this.isDeleting && this.txt === '') {
+      this.isDeleting = false;
+      this.loopNum++;
+      delta = 500;
+    }
+
+    setTimeout(function() {
+      that.tick();
+    }, delta);
+  };
+
+  window.onload = function() {
+    var elements = document.getElementsByClassName('typewrite');
+    for (var i=0; i<elements.length; i++) {
+      var toRotate = elements[i].getAttribute('data-type');
+      var period = elements[i].getAttribute('data-period');
+      if (toRotate) {
+        new TxtType(elements[i], JSON.parse(toRotate), period);
+      }
+    }
+    // INJECT CSS
+    var css = document.createElement("style");
+    css.type = "text/css";
+    css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
+    document.body.appendChild(css);
+  };
 </script>
 </body>
 </html>
