--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -11,7 +11,9 @@
       <div class="indexWrapper">
         <div>
           <h1 class="indexHeader">
-            {{ site.author.name }}
+            <span style="color: #fe0000">
+              {{ site.author.name }}
+            </span>
             <div class="authorPronouns">
               <h3 href="" class="typewrite"
                  data-period="2000"
