--- a/_sass/termina-plex/_themes.scss
+++ b/_sass/termina-plex/_themes.scss
@@ -25,10 +25,10 @@
   --table-border-color: #e0e0e0;
   --table-text-color: #000000;
 
-  --link-color: #0043ce;
-  --link-active-color: #0043ce;
-  --link-hover-color: #0043ce;
-  --link-visited-color: #6929c4;
+  --link-color: #ff2100;
+  --link-active-color: #b20000;
+  --link-hover-color: #b20000;
+  --link-visited-color: #8c0000;
 
   // Highlight Colors for Light Mode
   --highlight-c:     #998; // Comment
@@ -119,10 +119,10 @@
     --table-text-color: #ffffff;
     --table-zebra-color: #393939;
 
-    --link-color: #a6c8ff;
-    --link-active-color: #a6c8ff;
-    --link-hover-color: #a6c8ff;
-    --link-visited-color: #d4bbff;
+    --link-color: #ff2100;
+    --link-active-color: #b20000;
+    --link-hover-color: #b20000;
+    --link-visited-color: #8c0000;
 
     // Highlight Colors for Dark Mode
     --highlight-c:     #545454; // Comment
@@ -213,10 +213,10 @@
   --table-text-color: #ffffff;
   --table-zebra-color: #393939;
 
-  --link-color: #a6c8ff;
-  --link-active-color: #a6c8ff;
-  --link-hover-color: #a6c8ff;
-  --link-visited-color: #d4bbff;
+  --link-color: #ff3f22;
+  --link-active-color: #ff1717;
+  --link-hover-color: #ff1717;
+  --link-visited-color: #ff3f22;
 
   // Highlight Colors for Dark Mode
   --highlight-c:     #545454; // Comment
